--- a/week2/oj-client/package.json
+++ b/week2/oj-client/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "ace-builds": "^1.3.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
+    "socket.io": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
