--- a/week3/executor/Dockerfile
+++ b/week3/executor/Dockerfile
@@ -2,7 +2,7 @@ From ubuntu:16.04
 MAINTAINER yuqi
 
 RUN apt-get update
-RUN apt-get intall -y openjdk-8-jdk #java compiler
-RUN apt-get install -y python3
+RUN apt-get install -y  openjdk-8-jdk 
+RUN apt-get install -y python3 
 
 
