--- a/week3/executor/Dockerfile
+++ b/week3/executor/Dockerfile
@@ -1,8 +1,8 @@
-From ubuntu:16.04
-MAINTAINER yuqi
+FROM ubuntu:16.04
 
-RUN apt-get update
+RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y  openjdk-8-jdk 
 RUN apt-get install -y python3 
+RUN apt-get install -y g++
 
 
